# yolo-auto

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: yolo-auto-mcp.mdc
.github/workflows/: ci.yml  validate-repo.yml
docker/: Dockerfile  Dockerfile.app  README.md  docker-compose.app.yaml  docker-compose.yaml  mc-config.json
docs/: CAPABILITY_BOUNDARIES.md  INDEX.md  ITERATIONS.md  QUALITY-GATES.md
scripts/: preview_feishu_training_chart_card.py  validate-repo.sh
src/yolo_auto/: __init__.py  config.py  control_api.py  cvat_client.py  errors.py  feishu.py  models.py  notifier_state_store.py  prompts.py  remote_control.py  resources.py  server.py  ssh_client.py  state_store.py  tracker.py  worker.py
src/yolo_auto/tools/: __init__.py  check_config.py  dataset.py  dataset_check.py  dataset_fix.py  export.py  job_naming.py  jobs.py  metrics_csv.py  model_ref.py  (+8 more)
tests/: __init__.py  conftest.py  test_check_config.py  test_dataset_check.py  test_dataset_fix.py  test_dataset_project.py  test_export.py  test_feishu.py  test_job_naming.py  test_jobs.py  test_mlflow_grouping.py  test_model_ref.py  test_resources_mlflow_readonly.py  test_sahi_slice.py  test_sahi_slice_paths.py  test_server_start_training.py  test_setup_env.py  test_state_store.py  test_status.py  test_status_http.py  test_status_milestone.py  test_sync.py  test_tracker_dataset_input.py  test_tracker_registry.py  test_training.py  test_training_busy_guard.py  test_training_http.py  test_tuner_mlflow_readonly.py  test_validate.py  test_validate_http.py
