[project]
name = "yolo-auto"
version = "0.1.0"
description = "YOLO Auto MCP Workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "mlflow>=2.22.0",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.2",
]

[project.scripts]
yolo-auto-mcp = "yolo_auto.server:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
