[project]
name = "yolo-auto"
version = "0.1.0"
description = "YOLO Auto MCP Workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "mlflow==3.11.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.2",
]

[project.scripts]
yolo-auto-mcp = "yolo_auto.server:main"
yolo-auto-watch = "yolo_auto.worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    # 仅用于本地排查/CI 兼容：pytest-cov 不强制，当前测试框架未使用
    "pytest-cov>=5.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
